web/src/main/webapp/css/style.css
/* =================================
------------------------------------
  Mondy - Real Estate HTML Template
  Version: 1.0
 ------------------------------------
 ====================================*/

/*----------------------------------------*/

/* Template default CSS
/*----------------------------------------*/

html,
body {
	height: 100%;
	font-family: "Roboto", sans-serif;
	-webkit-font-smoothing: antialiased;
	font-smoothing: antialiased;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0;
	color: #322429;
	font-weight: 700;
}

h1 {
	font-size: 70px;
}

h2 {
	font-size: 36px;
}

h3 {
	font-size: 30px;
}

h4 {
	font-size: 24px;
}

h5 {
	font-size: 18px;
}

h6 {
	font-size: 16px;
}

p {
	font-size: 15px;
	color: #6a6a6a;
	line-height: 2;
}

img {
	max-width: 100%;
}

input:focus,
select:focus,
button:focus,
textarea:focus {
	outline: none;
}

a:hover,
a:focus {
	text-decoration: none;
	outline: none;
}

ul,
ol {
	padding: 0;
	margin: 0;
}
/*-------
our div's
-------*/

/*-------
div's for fav beam
-------*/

 .ShowHide {
	 overflow: hidden;
	 font-family: Arial, Helvetica, sans-serif;
	 background-color: #555555;
	 color: #FFFFFF;
	 padding: 4px;
 }

#left {
	overflow: hidden;
	text-align: center;
	height: 35px;
	padding-top: 13px;
}

#right {
	float: right;
	width: 30px;
	height: 35px;
	text-align: center;
}

#bottomNameDate {
	padding: 7px;
	background-color: #777777;
	width: 20%;
	height: 70px;
	float: left;
	display: inline-block;
}

#bottomText {
	padding: 7px;
	background-color: #999999;
	height: 70px;
	display: inline-block;
}

.ShowHide a {
	color: #FFFFFF;
	text-decoration: none;
}

/*-------
div's for event display
-------*/

.box {
	border: 2px solid red;
	border-radius: 8px;
	padding:2px;
	width: 80%;
	position: center;
	margin-left: 10%;
	margin-top: 30px;
}

.title {
	padding-top: 100px;
	text-align: left;
	margin-top: 35px;
	margin-bottom: 65px;
}

.subcontainer {
	margin-bottom: 300px;
	width: 100%;
}

.leftBanner {
	width: 20%;
	height: 100%;
	position: relative;
	float:left;
}

.leftBannerChild1 {
	text-align: center;
	float: top;
	height: 50%;
}

.leftBannerChild2 {
	text-align: center;
	float: bottom;
	height: 50%;
}


.submain {
	width: 80%;
	float: right;
	position: relative;
}


/*---------------------
Helper CSS
 -----------------------*/

.section-title {
	text-align: center;
	margin-bottom: 65px;
}

.section-title h2 {
	font-size: 72px;
}

.section-title p {
	padding: 25px 30px 10px;
	margin-bottom: 0;
}

.set-bg {
	background-repeat: no-repeat;
	background-size: cover;
	background-position: top center;
}

.spad {
	padding-top: 110px;
	padding-bottom: 110px;
}

.text-white h1,
.text-white h2,
.text-white h3,
.text-white h4,
.text-white h5,
.text-white h6,
.text-white p,
.text-white span,
.text-white li,
.text-white a {
	color: #fff;
}

/*---------------------
Commom elements
 -----------------------*/

/* buttons */

.site-btn {
	display: inline-block;
	border: none;
	padding: 21px 44px;
	min-width: 156px;
	font-size: 16px;
	background: #ff000a;
	color: #fff;
	line-height: normal;
	cursor: pointer;
	text-transform: uppercase;
	text-align: center;
}

.site-btn:hover {
	color: #fff;
}

.site-btn.sb-light {
	background: #fff;
	color: #241e1e;
}

.site-btn.sb-big {
	font-weight: 700;
	font-family: "Lato", sans-serif;
	padding: 21px 48px;
}

/* Preloder */

#preloder {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	z-index: 999999;
	background: #000;
}

.loader {
	width: 40px;
	height: 40px;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -13px;
	margin-left: -13px;
	border-radius: 60px;
	animation: loader 0.8s linear infinite;
	-webkit-animation: loader 0.8s linear infinite;
}

@keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
	50% {
		-webkit-transform: rotate(180deg);
		transform: rotate(180deg);
		border: 4px solid #673ab7;
		border-left-color: transparent;
	}
	100% {
		-webkit-transform: rotate(360deg);
		transform: rotate(360deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
}

@-webkit-keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
	50% {
		-webkit-transform: rotate(180deg);
		border: 4px solid #673ab7;
		border-left-color: transparent;
	}
	100% {
		-webkit-transform: rotate(360deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
}


/*------------------
list-section
 ---------------------*/

/*
@import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
@import url("//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
body {
	padding: 60px 0px;
	background-color: rgb(220, 220, 220);
}

.event-list {
	list-style: none;
	font-family: 'Lato', sans-serif;
	margin: 0px;
	padding: 0px;
}
.event-list > li {
	background-color: rgb(255, 255, 255);
	box-shadow: 0px 0px 5px rgb(51, 51, 51);
	box-shadow: 0px 0px 5px rgba(51, 51, 51, 0.7);
	padding: 0px;
	margin: 0px 0px 20px;
}
.event-list > li > time {
	display: inline-block;
	width: 100%;
	color: rgb(255, 255, 255);
	background-color: rgb(197, 44, 102);
	padding: 5px;
	text-align: center;
	text-transform: uppercase;
}
.event-list > li:nth-child(even) > time {
	background-color: rgb(165, 82, 167);
}
.event-list > li > time > span {
	display: none;
}
.event-list > li > time > .day {
	display: block;
	font-size: 56pt;
	font-weight: 100;
	line-height: 1;
}
.event-list > li time > .month {
	display: block;
	font-size: 24pt;
	font-weight: 900;
	line-height: 1;
}
.event-list > li > img {
	width: 100%;
}
.event-list > li > .info {
	padding-top: 5px;
	text-align: center;
}
.event-list > li > .info > .title {
	font-size: 17pt;
	font-weight: 700;
	margin: 0px;
}
.event-list > li > .info > .desc {
	font-size: 13pt;
	font-weight: 300;
	margin: 0px;
}
/* ... */

